app/src/main/java/com/example/windows/data/models/errors/LoginRequest.kt
package com.example.windows.data.models.errors

data class LoginRequest(val login: String, val password: String)